refactor api & service (add interface for CoinMarket ,change fields with naming convention, rename RequestHelper)